responses and an update

--- a/rupnik2015.tex
+++ b/rupnik2015.tex
@@ -445,7 +445,7 @@ To investigate the empirical performance of the low-rank approximations we will 
  articles, $52$ with more than 100k %$10^5$
  articles, $129$ with more than 10k articles, and $236$ with more than $1,000$ articles.
 
-Each Wikipedia page is embedded in the page tag. First, we check if the title of the page consists of any special namespace (which includes categories and discussion pages) and do not process such pages. Then, we check if this is a redirection page and we store the redirect link because inter-language links can point to redirection links also. If none of the above applies, we extract the text and parse the Wikipedia markup. Currently, all the markup is removed.
+Each Wikipedia page is embedded in the page tag. First, we check if the title of the page starts with a Wikipedia namespace (which includes categories and discussion pages) and do not process the page if it does. Then, we check if this is a redirection page and we store the redirect link because inter-language links can point to redirection links also. If none of the above applies, we extract the text and parse the Wikipedia markup. Currently, all the markup is removed.
 
 We get inter-language link matrix using previously stored redirection links and inter-language links. If an inter-language link points to the redirection we replace it with the redirection target link. It turns out that we obtain the matrix $M$ that is not symmetric, consequently the underlying graph is not symmetric. That means that existence of the inter-language link in one way (i.e. English to German) does not guarantee that there is an inter-language link in the reverse direction (German to English). To correct this we transform this matrix to be symmetric by computing $M+M^T$ and obtaining an undirected graph. In the rare case that after symmetrization we have multiple links pointing from the document, we pick the first one that we encountered. This matrix enables us to build an alignment across all Wikipedia \footnote{https://www.wikipedia.org/ dumps available in 2013} languages.
 
