--- a/jair.bib
+++ b/jair.bib
@@ -238,7 +238,7 @@
   Title                    = {Moses: Open source toolkit for statistical machine Translation},
   Author                   = {Hieu Hoang and Alexandra Birch and Chris Callison-burch and Richard Zens and Rwth Aachen and Alexandra Constantin and Marcello Federico and Nicola Bertoldi and Chris Dyer and Brooke Cowan and Wade Shen and Christine Moran and Ondrej Bojar},
   Year                     = {2007},
-  booktitle                = {Proceedings of the ACL-2007 Demo and Poster Sessions}, 
+  booktitle                = {Proceedings of the ACL-2007 Demo and Poster Sessions},
   Pages                    = {177--180}
 }
 
@@ -613,7 +613,7 @@
  doi = {10.14778/2733004.2733063},
  acmid = {2733063},
  publisher = {VLDB Endowment},
-} 
+}
 
 @article{levandowsky1971,
 	Annote = {10.1038/234034a0},
@@ -636,10 +636,10 @@
 }
 
 @book{multilingualBook,
-	author = {Peters, Carol. and Braschler, Martin. and SpringerLink (Online service)},
+	author = {Peters, Carol and Braschler, Martin},
 	title = {Multilingual Information Retrieval},
 	publisher = {Springer Berlin Heidelberg,},
-	year = {2012.},
+	Year = {2012},
 	address = {Berlin, Heidelberg :},
 	url = {http://dx.doi.org/10.1007/978-3-642-23008-0}
 }
