--- a/jair.bib
+++ b/jair.bib
@@ -234,13 +234,21 @@
   Year                     = {2007}
 }
 
-@InProceedings{moses,
-  Title                    = {Moses: Open source toolkit for statistical machine Translation},
-  Author                   = {Hieu Hoang and Alexandra Birch and Chris Callison-burch and Richard Zens and Rwth Aachen and Alexandra Constantin and Marcello Federico and Nicola Bertoldi and Chris Dyer and Brooke Cowan and Wade Shen and Christine Moran and Ondrej Bojar},
-  Year                     = {2007},
-  booktitle                = {Proceedings of the ACL-2007 Demo and Poster Sessions},
-  Pages                    = {177--180}
+@inproceedings{moses,
+ author = {Koehn, Philipp and Hoang, Hieu and Birch, Alexandra and Callison-Burch, Chris and Federico, Marcello and Bertoldi, Nicola and Cowan, Brooke and Shen, Wade and Moran, Christine and Zens, Richard and Dyer, Chris and Bojar, Ond\v{r}ej and Constantin, Alexandra and Herbst, Evan},
+ title = {Moses: Open Source Toolkit for Statistical Machine Translation},
+ booktitle = {Proceedings of the 45th Annual Meeting of the ACL on Interactive Poster and Demonstration Sessions},
+ series = {ACL '07},
+ year = {2007},
+ location = {Prague, Czech Republic},
+ pages = {177--180},
+ numpages = {4},
+ url = {http://dl.acm.org/citation.cfm?id=1557769.1557821},
+ acmid = {1557821},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
 }
+
 
 @Article{Holmes:1991:RCM:105724.105730,
   Title                    = {On random correlation matrices},
@@ -638,9 +646,9 @@
 @book{multilingualBook,
 	author = {Peters, Carol and Braschler, Martin},
 	title = {Multilingual Information Retrieval},
-	publisher = {Springer Berlin Heidelberg,},
+	publisher = {Springer Berlin Heidelberg},
 	Year = {2012},
-	address = {Berlin, Heidelberg :},
+	address = {Berlin, Heidelberg},
 	url = {http://dx.doi.org/10.1007/978-3-642-23008-0}
 }
 
@@ -678,4 +686,22 @@
   timestamp = {Mon, 14 Apr 2008 15:22:16 +0200},
   biburl    = {http://dblp.uni-trier.de/rec/bib/conf/ecir/PotthastSA08},
   bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{Milne:2008:LLW:1458082.1458150,
+ author = {Milne, David and Witten, Ian H.},
+ title = {Learning to Link with Wikipedia},
+ booktitle = {Proceedings of the 17th ACM Conference on Information and Knowledge Management},
+ series = {CIKM '08},
+ year = {2008},
+ isbn = {978-1-59593-991-3},
+ location = {Napa Valley, California, USA},
+ pages = {509--518},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1458082.1458150},
+ doi = {10.1145/1458082.1458150},
+ acmid = {1458150},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {data mining, semantic annotation, wikipedia, word sense disambiguation},
 }
